sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:10: error: not found: value i
      if (!plusPetitQue(i,i+1)){
                        ^AlgBubbleSort1:10: error: not found: value i
      if (!plusPetitQue(i,i+1)){
                          ^AlgBubbleSort1:11: error: not found: value i
        echange(i,i+1)
                ^AlgBubbleSort1:11: error: not found: value i
        echange(i,i+1)
                  ^